# topic_health_financing

./: .gitignore  README.md  pyproject.toml  requirements.txt
output/: Per capita spending ($US).csv  Share of GDP (%).csv  Share of government spending (%).csv  Total spending ($US billion).csv  africa_health_spending_gdp_usd.csv  chart_4_1.csv  chart_4_2.csv  covid_spending_gdp_share.feather  covid_spending_lcu.feather  covid_spending_usd_constant.feather  covid_spending_usd_constant_pc.feather  covid_spending_usd_current.feather  domestic general government.csv  domestic private excluding out-of-pocket.csv  expenditure_by_source.csv  external.csv  gov_expenditure.csv  gov_spending_gdp_share.feather  gov_spending_lcu.feather  gov_spending_usd_constant.feather  gov_spending_usd_constant_pc.feather  gov_spending_usd_current.feather  health_spending_by_disease_usd_constant_pc.feather  health_spending_by_source_gdp_share.feather  health_spending_by_source_lcu.feather  health_spending_by_source_usd_constant.feather  health_spending_by_source_usd_constant_pc.feather  health_spending_by_source_usd_current.feather  health_spending_gdp_share.feather  health_spending_lcu.feather  health_spending_oop_gdp_share.feather  health_spending_oop_lcu.feather  health_spending_oop_usd_constant.feather  health_spending_oop_usd_constant_pc.feather  health_spending_oop_usd_current.feather  health_spending_usd_constant.feather  health_spending_usd_constant_pc.feather  health_spending_usd_current.feather  other_domestic_private.csv  out_of_pocket_private.csv  (+36 more)
raw_data/: AU_members.json  (+32 more)
(+50 files in other folders)
