[tool.poetry]
name = "topic_health_financing"
version = "0.1.0"
description = "Analysis on health financing"
authors = ["The ONE Campaign"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.3.3"
pandas = "^2"
bblocks = "^1.2"
pydeflate = "^1"
requests = "^2.28.2"
scikit-learn = "^1.2.1"
oda-data = "^1"
policy-dbtools = { git = "https://github.com/ONEcampaign/policy_dbtools.git" }


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
