[tool.poetry]
name = "topic_health_financing"
version = "0.1.0"
description = "Analysis on health financing"
authors = ["The ONE Campaign"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
bblocks = "^1.4.1"
oda-data = "^1.5.3"
pydeflate = "^2.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"