[tool.poetry]
name = "topic_health_financing"
version = "0.1.0"
description = "Analysis on health financing"
authors = ["The ONE Campaign"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
oda-data = "^1"
bblocks = "^1.2"
pydeflate = "^2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"